Saved insertion sort time artifact

--- a/test/testing_time.ipynb
+++ b/test/testing_time.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 79,
    "id": "fd91bcd1",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import sys\n",
     "sys.path.append(\"../sortingAlgorithms\")\n",
     "\n",
+    "import pickle\n",
     "import random\n",
     "from time import sleep\n",
     "from typing import List\n",
@@ -59,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "0a11f047",
    "metadata": {},
    "outputs": [
@@ -72,25 +73,83 @@
     }
    ],
    "source": [
-    "Xn = [10_000*i for i in range(1, 11)]\n",
-    "yn = []\n",
-    "for one_list in tqdm([create_random_array(num_items) for num_items in Xn]):\n",
-    "    yn.append(insertion_sort_time(one_list, len(one_list)))"
+    "# Calculate real time of insertion sort on data\n",
+    "\n",
+    "# Xn = [10_000*i for i in range(1, 11)]\n",
+    "# yn = []\n",
+    "# for one_list in tqdm([create_random_array(num_items) for num_items in Xn]):\n",
+    "#     yn.append(insertion_sort_time(one_list, len(one_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "e81cd375",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save insertion sort time\n",
+    "\n",
+    "# with open(r\"..\\sortingAlgorithms\\artifacts\\insertion_sort_time.pkl\", \"wb\") as insertion_sort_stat_file:\n",
+    "#     pickle.dump({\"Xn\": Xn, \"yn\": yn}, insertion_sort_stat_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "90bd181a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(r\"..\\sortingAlgorithms\\artifacts\\insertion_sort_time.pkl\", \"rb\") as insertion_sort_stat_file:\n",
+    "    insertion_sort_stat_dict = pickle.load(insertion_sort_stat_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "3e2b08c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([10000, 20000, 30000, 40000, 50000, 60000, 70000, 80000, 90000, 100000],\n",
+       " [1.34616,\n",
+       "  5.38672,\n",
+       "  11.99161,\n",
+       "  21.47403,\n",
+       "  34.79702,\n",
+       "  53.27166,\n",
+       "  75.34559,\n",
+       "  93.22778,\n",
+       "  117.27781,\n",
+       "  157.83984])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Xn, yn = insertion_sort_stat_dict[\"Xn\"], insertion_sort_stat_dict[\"yn\"]\n",
+    "Xn, yn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
    "id": "edeccb32",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1dbdfd2eba0>]"
+       "[<matplotlib.lines.Line2D at 0x1dbe23bd160>]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     },
